--- a/Advanced-Portfolio/index.html
+++ b/Advanced-Portfolio/index.html
@@ -1,31 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brijmohan Siyag</title>
     <link rel="stylesheet" href="css/master.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300&family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300&family=Indie+Flower&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- <div class="top-line">
+        <img class="menu" src="images/menu.png" alt="">
+    </div> -->
     <div class="topcontainer">
         <img class="upper-cloud" src="images/cloud_2601-fe0f.png" alt="cloud-image" width="10%">
         <h1 class="h1">I'm Birju</h1>
         <p class="saviour">The saviour</p>
         <img class="lower-cloud" src="images/cloud_2601-fe0f.png" alt="cloud-image" width="10%">
         <img class="mountain" src="images/mountain.png" alt="mountain-image">
-
     </div>
-    <!-- <div class="middlecontainer">
-
+    <div class="middle-container">
+        <div class="profile">
+            <img src="images/profile.png" alt="">
+            <h2>Hello</h2>
+            <p class="intro">My name is Brijmohan Siyag. I am a Competitive Programeer and Web Developer. I love Coding/Programming and Computer related stuffs.
+            </p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2 class="my-skills">My Skills.</h2>
+            <div class="skill-row">
+                <img class="coding" src="images/coding.png" alt="">
+                <h3>Coding/Programming</h3>
+                <p class="description">I do Competitive Programming on various platforms like codeforces,codechef,leetcode etc. <br> I am a 4🌟 coder at codechef. My rating on codeforces is 983 and on codechef is 1843.
+                </p>
+            </div>
+            <div class="skill-row">
+                <img class="webd" src="images/webdesigner.png" alt="">
+                <h3>Web Developer</h3>
+                <p class="description">I am a fullstack Web Developer. I worked on two of my own Portfolio Projects and looking forward in this feild. <br>To check out my work <a href="https://brijsiyag.github.io">click here</a></p>
+            </div>
+            <div class="skill-row">
+                <img class="editing" src="images/video-editing.png" alt="">
+                <h3>Graphic Designer and VFX</h3>
+                <p class="description">I have intermediate knowledge of Adobe Photoshop,Adobe After Effects,Adobe Premier Pro and many of After Effects Plugins. <br> I do Photoshop,Video Editing and VFX in my pastime. </p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
     </div>
-    <div class="bottomcontainer">
 
-    </div> -->
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© 2021 Birju Siyag</p>
+    </div>
+
 </body>
 
 </html>
