--- a/Advanced-Portfolio/index.html
+++ b/Advanced-Portfolio/index.html
@@ -28,46 +28,79 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="images/profile.png" alt="">
+            <img class="profile-pic" src="images/profile.png" alt="">
             <h2>Hello</h2>
-            <p class="intro">My name is Brijmohan Siyag. I am a Competitive Programeer and Web Developer. I love Coding/Programming and Computer related stuffs.
+            <p class="intro">My name is Brijmohan Siyag. I am a Competitive Programeer and Web Developer. I love Coding
+                / Programming and Computer related stuffs.
             </p>
         </div>
         <hr>
         <div class="skills">
-            <h2 class="my-skills">My Skills.</h2>
-            <div class="skill-row">
+            <h2 class="my-skills">My Skills</h2>
+            <div class="skill-row-1">
                 <img class="coding" src="images/coding.png" alt="">
-                <h3>Coding/Programming</h3>
-                <p class="description">I do Competitive Programming on various platforms like codeforces,codechef,leetcode etc. <br> I am a 4🌟 coder at codechef. My rating on codeforces is 983 and on codechef is 1843.
+                <h3>Coding / Programming</h3>
+                <p class="description">I do Competitive Programming on various platforms like codeforces, codechef,
+                    leetcode etc. <br> I am a 4🌟 coder at codechef. My rating on codeforces is 983 and on codechef is
+                    1843.
                 </p>
             </div>
-            <div class="skill-row">
+            <div class="skill-row-2">
                 <img class="webd" src="images/webdesigner.png" alt="">
                 <h3>Web Developer</h3>
-                <p class="description">I am a fullstack Web Developer. I worked on two of my own Portfolio Projects and looking forward in this feild. <br>To check out my work <a href="https://brijsiyag.github.io">click here</a></p>
+                <p class="description">I am a fullstack Web Developer. I worked on two of my own Portfolio Projects and
+                    looking forward in this feild. <br>To check out my work <a href="https://brijsiyag.github.io">click
+                        here</a></p>
             </div>
-            <div class="skill-row">
+            <div class="skill-row-3">
                 <img class="editing" src="images/video-editing.png" alt="">
-                <h3>Graphic Designer and VFX</h3>
-                <p class="description">I have intermediate knowledge of Adobe Photoshop,Adobe After Effects,Adobe Premier Pro and many of After Effects Plugins. <br> I do Photoshop,Video Editing and VFX in my pastime. </p>
+                <h3>Graphic Designing and VFX</h3>
+                <p class="description">I have intermediate knowledge of Adobe Photoshop, Adobe After Effects, Adobe
+                    Premier Pro and many of After Effects Plugins. <br> I do Photoshop,Video Editing and VFX in my
+                    pastime. </p>
             </div>
         </div>
         <hr>
         <div class="contact-me">
-            <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <h2 class="get-in-touch">Get In Touch</h2>
+            <p class="margin-0">If you love coding as much as I do </p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2021 Birju Siyag</p>
+        <table style="display: flex;align-items: center;justify-content: center;">
+            <tr>
+                <td class="bottom-icon">
+                    <a href="https://www.linkedin.com/in/brijsiyag/" target="_blank"> <img src="images/linkedin.png"
+                            alt="linkedin"></a>
+                </td>
+                <td class="bottom-icon">
+                    <a href="https://github.com/brijsiyag" target="_blank"><img src="images/github.png"
+                            alt="github"></a>
+                </td>
+                <td class="bottom-icon">
+                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img src="images/twitter.png"
+                            alt="Twitter"></a>
+                </td>
+                <td class="bottom-icon">
+                    <a href="https://www.reddit.com/user/Birjusiyag" target="_blank"><img src="images/reddit.png"
+                            alt="reddit"></a>
+                </td>
+                <td class="bottom-icon">
+                    <a href="https://www.facebook.com/parkashram.siyag/" target="_blank"><img src="images/facebook.png"
+                            alt="facebook"></a>
+                </td>
+                <td class="bottom-icon">
+                    <a href="https://www.instagram.com/birjusiyag/" target="_blank"><img src="images/instagram.png"
+                            alt="Instagram"></a>
+                </td>
+            </tr>
+        </table>
+        <p class="copyright">© 2021 Birju Siyag</p>
+
+
     </div>
 
 </body>
