--- a/Advanced-Portfolio/index.html
+++ b/Advanced-Portfolio/index.html
@@ -16,9 +16,6 @@
 </head>
 
 <body>
-    <!-- <div class="top-line">
-        <img class="menu" src="images/menu.png" alt="">
-    </div> -->
     <div class="topcontainer">
         <img class="upper-cloud" src="images/cloud_2601-fe0f.png" alt="cloud-image" width="10%">
         <h1 class="h1">I'm Birju</h1>
@@ -64,13 +61,11 @@
         <div class="contact-me">
             <h2 class="get-in-touch">Get In Touch</h2>
             <p class="margin-0">If you love coding as much as I do </p>
-            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            <a class="btn" href="mailto:brijsiyag@gmail.com">CONTACT ME</a>
         </div>
     </div>
-
-
     <div class="bottom-container">
-        <table style="display: flex;align-items: center;justify-content: center;">
+        <table style="display: flex;align-items: center;justify-content: center; margin-top: 10px;">
             <tr>
                 <td class="bottom-icon">
                     <a href="https://www.linkedin.com/in/brijsiyag/" target="_blank"> <img src="images/linkedin.png"
@@ -99,10 +94,6 @@
             </tr>
         </table>
         <p class="copyright">© 2021 Birju Siyag</p>
-
-
     </div>
-
 </body>
-
 </html>
