--- a/tindog/index.html
+++ b/tindog/index.html
@@ -196,8 +196,10 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button class="btn btn-dark btn-lg download-btn" type="button"><span class="fa fa-apple"
+      aria-hidden="true"></span> Download</button>
+  <button class="btn btn-outline-dark download-btn" type="button"><span class="fa fa-android"
+      aria-hidden="true"></span> Download</button>
 
   </section>
 
