--- a/tindog/index.html
+++ b/tindog/index.html
@@ -32,13 +32,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto justify-content-center" style="font-size: 2rem;">
               <li class="nav-item">
-                <a class="nav-link active" style="color: white;margin: 0 15%;" aria-current="page" href="">About</a>
+                <a class="nav-link active" style="color: white;margin: 0 15%;" aria-current="page" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" style="color: white;margin: 0 15%;" aria-current="page" href="">Pricing</a>
+                <a class="nav-link active" style="color: white;margin: 0 15%;" aria-current="page" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" style="color: white;margin: 0 15%;" aria-current="page" href="">Downloads</a>
+                <a class="nav-link active" style="color: white;margin: 0 15%;" aria-current="page" href="#cta">Downloads</a>
               </li>
             </ul>
           </div>
@@ -123,7 +123,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-icon" src="images/Techcrunch.png" alt="tc-logo">
+    <img class="press-icon" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-icon" src="images/tnw.png" alt="tnw-logo">
     <img class="press-icon" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-icon" src="images/mashable.png" alt="mashable-logo">
@@ -195,10 +195,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-dark btn-lg download-btn" type="button"><span class="fa fa-apple"
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-dark btn-lg download-btn-cta" type="button"><span class="fa fa-apple"
       aria-hidden="true"></span> Download</button>
-  <button class="btn btn-outline-dark download-btn" type="button"><span class="fa fa-android"
+  <button class="btn btn-light download-btn-cta" type="button"><span class="fa fa-android"
       aria-hidden="true"></span> Download</button>
 
   </section>
@@ -208,6 +208,10 @@
 
   <footer id="footer">
 
+    <span class="fa fa-twitter"aria-hidden="true"></span>
+    <span class="fa fa-facebook"aria-hidden="true"></span>
+    <span class="fa fa-instagram"aria-hidden="true"></span>
+    <span class="fa fa-envelope"aria-hidden="true"></span>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
