--- a/tindog/index.html
+++ b/tindog/index.html
@@ -47,7 +47,7 @@
       <div class="row title-row">
         <div class="col-lg-6">
           <h1 class="discription">Meet new and interesting dogs nearby.</h1>
-          <div style="text-align: center;">
+          <div>
             <button class="btn btn-dark btn-lg download-btn" type="button"><span class="fa fa-apple"
                 aria-hidden="true"></span> Download</button>
             <button class="btn btn-outline-light download-btn" type="button"><span class="fa fa-android"
@@ -56,7 +56,7 @@
         </div>
 
 
-        <div class="col-lg-6" style="text-align: center;">
+        <div class="col-lg-6">
           <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
         </div>
 
@@ -212,7 +212,7 @@
     <span class="fa fa-facebook"aria-hidden="true"></span>
     <span class="fa fa-instagram"aria-hidden="true"></span>
     <span class="fa fa-envelope"aria-hidden="true"></span>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2021 TinDog</p>
 
   </footer>
 
