--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="School/index.html">School</a>
     <a href="Advanced-Portfolio/index.html">Advanced-Portfolio</a>
     <a href="tindog/index.html">tindog</a>
+    <a href="Dice/index.html">The Dice</a>
 </body>
 </html>
