--- a/Dice/index.html
+++ b/Dice/index.html
@@ -24,6 +24,7 @@
 </header>
 
 <body>
+    <p>Punch The Dice to Roll</p>
     <div>
         <img id="dice-change" src="images/dice-6.png" alt="dice" onclick="myFunction();">
     </div>
