--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="css.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <title>Birju Siyag</title>
 </head>
+
 <body>
-    <a href="Portfolio/index.html">Portfolio</a>
-    <a href="School/index.html">School</a>
-    <a href="Advanced-Portfolio/index.html">Advanced-Portfolio</a>
-    <a href="tindog/index.html">tindog</a>
-    <a href="Dice/index.html">The Dice</a>
+    <h1 class="container-fluid">Brijmohan Siyag</h1>
+    <div class="myprojects container-fluid">
+        <div>
+        <span class="letter">M</span>
+        <span class="letter">y</span>
+        </div>
+        <div>
+        <span class="letter">P</span>
+        <span class="letter">r</span>
+        <span class="letter">o</span>
+        <span class="letter">j</span>
+        <span class="letter">e</span>
+        <span class="letter">c</span>
+        <span class="letter">t</span>
+        <span class="letter">s</span>
+    </div>
+    </div>
+    <div class="container-fluid">
+    <div class="row">
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Dice/index.html">The Dice</a>
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/tindog/index.html">tindog</a>
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Advanced-Portfolio/index.html">Advanced-Portfolio</a>
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Portfolio/index.html">Portfolio</a>
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/School/index.html">School</a>
+    </div>
+</div>
+    <footer class="footer container-fluid ">
+        ©2021 birju siyag
+    </footer>
 </body>
+
 </html>
