--- a/Web-Projects/tindog/index.html
+++ b/Web-Projects/tindog/index.html
@@ -207,7 +207,7 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <a href="https://wa.me/9571805234?text=Hi">Whatsapp</a>
     <span class="fa fa-twitter"aria-hidden="true"></span>
     <span class="fa fa-facebook"aria-hidden="true"></span>
     <span class="fa fa-instagram"aria-hidden="true"></span>
