tindog-mobile-layout-update

--- a/Web-Projects/tindog/index.html
+++ b/Web-Projects/tindog/index.html
@@ -47,7 +47,7 @@
       <div class="row title-row">
         <div class="col-lg-6">
           <h1 class="discription">Meet new and interesting dogs nearby.</h1>
-          <div>
+          <div class="btn-container">
             <button class="btn btn-dark btn-lg download-btn" type="button"><span class="fa fa-apple"
                 aria-hidden="true"></span> Download</button>
             <button class="btn btn-outline-light download-btn" type="button"><span class="fa fa-android"
