--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Advanced-Portfolio/index.html">Advanced-Portfolio</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Portfolio/index.html">Portfolio</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/School/index.html">School</a>
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Calculator/index.html">Calculator</a>
     </div>
 </div>
     <footer class="footer container-fluid ">
