--- a/Web-Projects/Calculator/index.html
+++ b/Web-Projects/Calculator/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <title>Calculator</title>
 </head>
-<body>
+<body> 
+    <h1> Basic Calculator</h1>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 display">
@@ -109,6 +113,8 @@
 
 
     </div>
+
+    <footer class="footer">©2021 Briju Siyag</footer>
     <script src="index.js"></script>
 </body>
 </html>
