--- a/Web-Projects/Calculator/index.html
+++ b/Web-Projects/Calculator/index.html
@@ -114,7 +114,14 @@
 
     </div>
 
-    <footer class="footer">©2021 Briju Siyag</footer>
+    <footer class="footer">
+        <div class="mute">
+            <img class="mute" src="images/volume.png" alt="">
+        </div>
+        <div>
+            ©2021 Briju Siyag
+        </div>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
