--- a/Web-Projects/Calculator/index.html
+++ b/Web-Projects/Calculator/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <footer class="footer">
-        <div class="mute">
+        <div>
             <img class="mute" src="images/volume.png" alt="">
         </div>
         <div>
