commit to master

--- a/Web-Projects/Calculator/index.html
+++ b/Web-Projects/Calculator/index.html
@@ -22,17 +22,17 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-3 element-clear btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-19 btn btn-outline-primary btn-lg">
                 C
             </div>
-            <div class="col-sm-3 element-open btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-18 btn btn-outline-primary btn-lg">
                 (
             </div>
-            <div class="col-sm-3 element-close btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-17 btn btn-outline-primary btn-lg">
                 )
             </div>
-            <div class="col-sm-3 element-divide btn btn-outline-primary btn-lg">
-                ÷
+            <div class="col-sm-3 element-16 btn btn-outline-primary btn-lg">
+                /
             </div>
         </div>
 
@@ -50,8 +50,8 @@
             <div class="col-sm-3 element-9 btn btn-outline-primary btn-lg">
                 9
             </div>
-            <div class="col-sm-3 element-multiply btn btn-outline-primary btn-lg">
-                x
+            <div class="col-sm-3 element-15 btn btn-outline-primary btn-lg">
+                *
             </div>
         </div>
 
@@ -68,7 +68,7 @@
             <div class="col-sm-3 element-6 btn btn-outline-primary btn-lg">
                 6
             </div>
-            <div class="col-sm-3 element-minus btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-14 btn btn-outline-primary btn-lg">
                 -
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="col-sm-3 element-3 btn btn-outline-primary btn-lg">
                 3
             </div>
-            <div class="col-sm-3 element-plus btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-13 btn btn-outline-primary btn-lg">
                 +
             </div>
         </div>
@@ -98,13 +98,13 @@
             <div class="col-sm-3 element-0 btn btn-outline-primary btn-lg">
                 0
             </div>
-            <div class="col-sm-3 element-dot btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-10 btn btn-outline-primary btn-lg">
                 .
             </div>
-            <div class="col-sm-3 element-plus-minus btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-11 btn btn-outline-primary btn-lg">
                 +/-
             </div>
-            <div class="col-sm-3 element-equal btn btn-outline-primary btn-lg">
+            <div class="col-sm-3 element-12 btn btn-outline-primary btn-lg">
                 =
             </div>
 
