--- a/Web-Projects/Calculator/index.html
+++ b/Web-Projects/Calculator/index.html
@@ -116,7 +116,7 @@
 
     <footer class="footer">
         <div>
-            <img class="mute" src="images/volume.png" alt="">
+            <img class="mute" src="images/mute.png" alt="">
         </div>
         <div>
             ©2021 Briju Siyag
