--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
     </div>
     <div class="container-fluid">
     <div class="row">
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/The-Simon-Game/index.html">The Simon Game</a>
+        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Calculator/index.html">Calculator</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Dice/index.html">The Dice</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/tindog/index.html">tindog</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Advanced-Portfolio/index.html">Advanced-Portfolio</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Portfolio/index.html">Portfolio</a>
         <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/School/index.html">School</a>
-        <a class="btn btn-outline-primary btn-lg col-lg-3" href="Web-Projects/Calculator/index.html">Calculator</a>
     </div>
 </div>
     <footer class="footer container-fluid ">
