Advanced Portfolio Responsive

--- a/Web-Projects/Advanced-Portfolio/index.html
+++ b/Web-Projects/Advanced-Portfolio/index.html
@@ -36,25 +36,28 @@
             <h2 class="my-skills">My Skills</h2>
             <div class="skill-row-1">
                 <img class="coding" src="images/coding.png" alt="">
-                <h3>Coding / Programming</h3>
+                <div><h3>Coding / Programming</h3>
                 <p class="description">I do Competitive Programming on various platforms like codeforces, codechef,
-                    leetcode etc. <br> I am a 4🌟 coder at codechef. My rating on codeforces is 983 and on codechef is
+                    leetcode etc. <br> I am a 4🌟 coder at codechef. My rating on codeforces is 1208 and on codechef is
                     1843.
                 </p>
             </div>
+            </div>
             <div class="skill-row-2">
                 <img class="webd" src="images/webdesigner.png" alt="">
-                <h3>Web Developer</h3>
+                <div><h3>Web Developer</h3>
                 <p class="description">I am a fullstack Web Developer. I worked on two of my own Portfolio Projects and
                     looking forward in this feild. <br>To check out my work <a href="https://brijsiyag.github.io">click
                         here</a></p>
+                    </div>
             </div>
             <div class="skill-row-3">
                 <img class="editing" src="images/video-editing.png" alt="">
-                <h3>Graphic Designing and VFX</h3>
+                <div><h3>Graphic Designing and VFX</h3>
                 <p class="description">I have intermediate knowledge of Adobe Photoshop, Adobe After Effects, Adobe
                     Premier Pro and many of After Effects Plugins. <br> I do Photoshop,Video Editing and VFX in my
                     pastime. </p>
+                </div>
             </div>
         </div>
         <hr>
