--- a/Web-Projects/Advanced-Portfolio/index.html
+++ b/Web-Projects/Advanced-Portfolio/index.html
@@ -47,7 +47,7 @@
                 <img class="webd" src="images/webdesigner.png" alt="">
                 <div><h3>Web Developer</h3>
                 <p class="description">I am a fullstack Web Developer. I worked on two of my own Portfolio Projects and
-                    looking forward in this feild. <br>To check out my work <a href="https://brijsiyag.github.io">click
+                    looking forward in this field. <br>To check out my work <a href="https://brijsiyag.github.io">click
                         here</a></p>
                     </div>
             </div>
