--- a/Web-Projects/Advanced-Portfolio/index.html
+++ b/Web-Projects/Advanced-Portfolio/index.html
@@ -27,7 +27,7 @@
         <div class="profile">
             <img class="profile-pic" src="images/profile.png" alt="">
             <h2>Hello</h2>
-            <p class="intro">My name is Brijmohan Siyag. I am a Competitive Programeer and Web Developer. I love Coding
+            <p class="intro">My name is Brijmohan Siyag. I am a Competitive Programmer and Web Developer. I love Coding
                 / Programming and Computer related stuffs.
             </p>
         </div>
